# dreamteam

./: .gitignore  README.md  config.yaml  pyproject.toml
data/: NJ-Liste H4R.xlsx  NJ_List.csv  db_data.csv
sample_data/: ARES.csv  Fahrplan.csv  Fahrplan_zuege.csv  Fahrplan_zuglaeufe.csv  Zuege.csv  Zuglaeufe.csv  Zugnummern.csv
src/dreamteam/: analyzer.html  app.py  login.html  main.py  utils.py
src/dreamteam/data/: ares_H4R.xlsx  ares_cleaned.csv
src/dreamteam/data_handling/: ares_cleaning.py  combine_data.py  extract_endpoints.py  find_inconsistencies.py  load_db_data.py  load_oebb_data.py  load_sbb_data.py
src/dreamteam/scripts/: run_combine_data.py
