[project]
name = "dreamteam"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "pyyaml>=6.0.3",
    "requests>=2.34.2",
]


[tool.setuptools.packages.find]
where = ["src/dreamteam"]
